--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@domain.com
-author: GitHub User
+title: CSMath 
+email: tranhoaichau.00@gmail.com
+author: ProfEddie 
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
@@ -217,3 +217,6 @@ plugins:
   - jekyll-sitemap
   - jekyll-paginate
   - jekyll-spaceship
+
+theme: jekyll-theme-yat
+remote_theme: "jeffreytse/jekyll-theme-yat"
