--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Your awesome heading"
-  subheading: "Your awesome subheading"
+  heading: "Welcome to our AIBlog"
+  subheading: "Essential and distilled knowledge for AI/DS"
   banner: "Your image url"
