--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: CSMath 
+title: AIBlog 
 email: tranhoaichau.00@gmail.com
-author: ProfEddie 
+author: Hoai-Chau Tran 
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
@@ -37,18 +37,18 @@ author: ProfEddie
 # * sound recording copyright: (p) - ℗
 #
 # For example:
-#   "Copyright (c) 2017-{currentYear} <a href="https://example.com">{author}</a>"
+  # "Copyright (c) 2017-{currentYear} <a href="https://example.com">{author}</a>"
 #   "Copyright © 2017-2021 Foobar"
 #
-copyright: "Unpublished Work (cleft) 2017-{currentYear} {author}"
+copyright: "Copyright (cleft) 2023-{currentYear} <a href='https://github.com/ProfEddie'>{author}</a>"
 
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. https://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://mushokubloggers.github.io" # the base hostname & protocol for your site, e.g. https://example.com
 favicon: "" # the favicon for your site
 
 # Yat date format
@@ -63,7 +63,7 @@ yat:
 # header_transparent: true
 
 # If you want to change the content width, you can set to another value
-# content_width: "920px"
+content_width: "1080px"
 
 # Google analytics
 # google_analytics: [Tracking ID]
@@ -80,7 +80,11 @@ yat:
 #   - lang: en
 #     img: https://cdn.countryflags.com/thumbs/united-states-of-america/flag-400.png
 #     text: English
-#
+
+#   - lang: vi 
+#     img: https://cdn.countryflags.com/thumbs/vietnam/flag-400.png
+#     text: Vietnamese 
+# #
 #   - lang: fr
 #     img: https://cdn.countryflags.com/thumbs/france/flag-400.png
 #     text: French
@@ -156,9 +160,9 @@ yat:
 # Page default value
 # defaults:
 #   home:
-#     heading: "Your awesome heading"
-#     subheading: "Your awesome subheading"
-#     banner: "Your image url"
+#     heading: "Welcome to AIBlog"
+#     subheading: "Essential maths for AI/DS"
+    # banner: "Your image url"
 
 # Banner default settings
 # These banner settings are for global banner default, but you can also
@@ -183,8 +187,8 @@ yat:
 # paginate: 5
 
 # Disqus comments
-# disqus:
-#   shortname: "Your Disqus username"
+disqus:
+  shortname: "Admin"
 
 # Gitment comments
 # gitment:
