--- a/_config.yml
+++ b/_config.yml
@@ -222,5 +222,5 @@ plugins:
   - jekyll-paginate
   - jekyll-spaceship
 
-# theme: jekyll-theme-yat
-remote_theme: "jeffreytse/jekyll-theme-yat"
+theme: jekyll-theme-yat
+# remote_theme: "jeffreytse/jekyll-theme-yat"
